# libavinc

./: .gitignore  LICENSE  README.md  format.sh  libavinc.hpp
examples/: CMakeLists.txt  mkmp4.cpp
